force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices created for constt assembly eligible events</description>
    <label>Z_Unused_NotDeletable_2106 Event Invoice</label>
    <nameField>
        <displayFormat>Invoice {YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Z_Unused_NotDeletable_2106 Invoice No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable_2106Event Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>