force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contribution_Amount__c</fullName>
    <label>Contribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>