force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__HPC_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__HPC_Amount__c</fullName>
    <description>Amount to be deducted from HPC MR Reserve.</description>
    <inlineHelpText>Amount to be deducted from HPC MR Reserve</inlineHelpText>
    <label>HPC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>