force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__HPT_Allocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__HPT_Allocation__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2009 HPT Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>