force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <description>Date on which invoice was sent</description>
    <inlineHelpText>Date on which invoice was sent</inlineHelpText>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>