force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__Lease_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_F__c</fullName>
    <formula>CASESAFEID( leaseworks__Supplemental_Rent_EE__r.leaseworks__Lease__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>{Lease</label>
    <type>Text</type>
</CustomField>