force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__LLP_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LLP_Amount__c</fullName>
    <inlineHelpText>The amount that is being claimed by the lessee for LLP replacements.</inlineHelpText>
    <label>Z_Unused LLP Event Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>