force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__Y_Hidden_AsmblyEventType__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_AsmblyEventType__c</fullName>
    <formula>IF(leaseworks__Supplemental_Rent_EE__c !=Null,
Text(leaseworks__Supplemental_Rent_EE__r.leaseworks__Assembly_Lkp__r.leaseworks__Type__c)+&apos;-&apos;+ leaseworks__Supplemental_Rent_EE__r.leaseworks__Assembly_Event_Info__r.leaseworks__Event_Type__c,null)</formula>
    <label>_AsmblyEventType</label>
    <type>Text</type>
</CustomField>