force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/fields/leaseworks__Y_Hidden_Paid_Amt_LLP_Parent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Paid_Amt_LLP_Parent__c</fullName>
    <formula>null/*Constt_Assembly_Eligible_Event__r.Paid_Amount__c -  Constt_Assembly_Eligible_Event__r.Paid_Amount_Assembly__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused Paid Amt LLP (Parent)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>