force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/recordTypes/leaseworks__Airframe.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Airframe</fullName>
    <active>true</active>
    <description>Airframe event invoices</description>
    <label>Airframe</label>
</RecordType>