force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/recordTypes/leaseworks__Assemblies.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assemblies</fullName>
    <active>true</active>
    <description>Assembly event invoices</description>
    <label>Assemblies</label>
</RecordType>