force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__Check_Invoice_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Check_Invoice_Total</fullName>
    <active>false</active>
    <description>Checks to make sure that the balance amount will cover this invoice amount</description>
    <errorConditionFormula>false /*(Invoice_Amount__c -
IF(ISNEW(),0,
PRIORVALUE(Invoice_Amount__c))
)&gt;Constt_Assembly_Eligible_Event__r.Balance_Amount__c */</errorConditionFormula>
    <errorDisplayField>leaseworks__Invoice_Amount__c</errorDisplayField>
    <errorMessage>Once you create this invoice, your total invoiced value will be greater than the claim amount. Your claim amount has to cover the invoice amount. Please correct the condition before saving.</errorMessage>
</ValidationRule>