force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__EitherLLPAmountOrModuleAmounts.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__EitherLLPAmountOrModuleAmounts</fullName>
    <active>false</active>
    <description>deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Please enter either the LLP Amount only or only the LLP Module Amounts.</errorMessage>
</ValidationRule>