force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__EventClaimisApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__EventClaimisApproved</fullName>
    <active>false</active>
    <description>Only when the status of the Claim is approved, users should be able to generate Invoice</description>
    <errorConditionFormula>false /*AND(
ISNEW(),
  !(ISPICKVAL( Claim__r.Claim_Status__c, &apos;Approved&apos;)) 
)*/</errorConditionFormula>
    <errorMessage>The event claim has to be approved before generating an invoice</errorMessage>
</ValidationRule>