force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__Inv_Amt_Must_Not_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Inv_Amt_Must_Not_Be_Negative</fullName>
    <active>true</active>
    <description>Invoice amount should not be above zero.</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
, 
BLANKVALUE(leaseworks__Invoice_Amount__c,0)&lt;=0
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Assembly_Amount__c</errorDisplayField>
    <errorMessage>Invoice amount must be greater than zero.</errorMessage>
</ValidationRule>