force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__IsAlreadyPaid.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__IsAlreadyPaid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c 
,TEXT(PRIORVALUE(leaseworks__Status__c )) ==&#39;Paid&#39;
)</errorConditionFormula>
    <errorMessage>You cannot modify an Invoice that is already paid.</errorMessage>
</ValidationRule>