force-app/main/default/objects/leaseworks__Constt_Assembly_Eligible_Event_Invoice__c/validationRules/leaseworks__PaymentDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PaymentDateRule</fullName>
    <active>true</active>
    <description>If the status is Paid, then you must enter payment Date on or after Invoice Date.</description>
    <errorConditionFormula>AND( 
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c ,
AND( 
text(leaseworks__Status__c)==&apos;Paid&apos; , 
OR (isBlank(leaseworks__Payment_Date__c), leaseworks__Payment_Date__c &lt; leaseworks__Invoice_Date__c) 
)
)</errorConditionFormula>
    <errorMessage>Please enter Payment Date and must be on or after the Invoice Date.</errorMessage>
</ValidationRule>